Fix add-task alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,6 @@
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    /* outline: 1px solid red; */
 }
 :root{
     --primary : #fff8f6;
@@ -138,18 +137,12 @@ body{
 
 .todo-card{
     height: 70px;
-    border-bottom: 1px solid var(--color-four);
+    border-top: 1px solid var(--color-four);
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 2px;
     margin-left: 10px;
-}
-.todo-card:first-child{
-    border-top: 1px solid var(--color-four);
-}
-.todo-card:last-child{
-    border: none;
 }
 .top-row, .bottom-row{
     display: flex;
@@ -185,12 +178,13 @@ body{
     height: 60px;
     display: inline-flex;
     align-items: center;
-    padding: 0 20px 0 10px;
+    padding: 0 20px 0 0;
     gap: 18px;
     cursor: pointer;
     color: var(--tertiary);
     user-select: none;
     border-top: 1px solid var(--color-four);
+    margin-left: 10px;
 }
 .list-add>span{
     line-height: 100%;
